fix hero on mobile

--- a/scss/pages/_page-home.scss
+++ b/scss/pages/_page-home.scss
@@ -1891,7 +1891,7 @@ footer {
   }
   div.background-image-holder.push-down {
     top: 10px;
-    background-position: 30% 50% !important;
+    background-position: 50% 50% !important;
     background-repeat: no-repeat;
   }
   div.background-image-holder.swing {
